# happy-hour-nix

./: cabal.project  default.nix
common/: common.cabal
common/src/Common/: Api.hs  Helper.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hs  main.hs
resources/data/: hopcat.json  johnny_noodle_king.json  maru_sushi.json  menu_item.json  schedule.json
