name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs:      src

  build-depends:        base
                      , attoparsec
                      , aeson
                      , bytestring
                      , directory
                      , lens
                      , safe-money
                      , time
                      , time-exts
                      , text

  exposed-modules:
    Common.Api
